--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -716,80 +716,6 @@ body.mobile-nav-active #mobile-nav-toggle {
 #features .section-description {
   padding-bottom: 10px;
 }
-
-/* Product Advanced Featuress Section
---------------------------------*/
-#advanced-features {
-  overflow: hidden;
-}
-
-#advanced-features .features-row {
-  padding: 60px 0 30px 0;
-}
-
-#advanced-features h2 {
-  font-size: 26px;
-  font-weight: 700;
-  color: #000;
-}
-
-#advanced-features h3 {
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-  font-style: italic;
-  color: #999;
-}
-
-#advanced-features p {
-  line-height: 24px;
-  color: #777;
-  margin-bottom: 30px;
-}
-
-#advanced-features i {
-  color: #666666;
-  font-size: 64px;
-  transition: 0.5s;
-  float: left;
-  padding: 0 15px 0px 0;
-  line-height: 1;
-}
-
-#advanced-features i:before {
-  background: #1dc8cd;
-  background: linear-gradient(45deg, #1dc8cd 0%, #55fabe 100%);
-  background-clip: border-box;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-#advanced-features .advanced-feature-img-right {
-  max-width: 100%;
-  float: right;
-  padding: 0 0 30px 30px;
-}
-
-#advanced-features .advanced-feature-img-left {
-  max-width: 100%;
-  float: left;
-  padding: 0 30px 30px 0;
-}
-
-@media (max-width: 768px) {
-  #advanced-features .advanced-feature-img-right, #advanced-features .advanced-feature-img-left {
-    max-width: 50%;
-  }
-}
-
-@media (max-width: 767px) {
-  #advanced-features .advanced-feature-img-right, #advanced-features .advanced-feature-img-left {
-    max-width: 100%;
-    float: none;
-    padding: 0 0 30px 0;
-  }
-}
-
 /* Call To Action Section
 --------------------------------*/
 #call-to-action {
@@ -836,225 +762,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   border: 2px solid #1dc8cd;
 }
 
-/* More Features Section
---------------------------------*/
-#more-features {
-  padding: 60px 0 60px 0;
-  overflow: hidden;
-}
 
-#more-features .box {
-  padding: 40px;
-  margin-bottom: 30px;
-  box-shadow: 0px 0px 30px rgba(73, 78, 92, 0.15);
-  background: #fff;
-  transition: 0.4s;
-}
-
-#more-features .icon {
-  float: left;
-}
-
-#more-features .icon i {
-  color: #666666;
-  font-size: 80px;
-  transition: 0.5s;
-  line-height: 0;
-}
-
-#more-features .icon i:before {
-  background: #1dc8cd;
-  background: linear-gradient(45deg, #1dc8cd 0%, #55fabe 100%);
-  background-clip: border-box;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-#more-features h4 {
-  margin-left: 100px;
-  font-weight: 700;
-  margin-bottom: 15px;
-  font-size: 18px;
-}
-
-#more-features h4 a {
-  color: #111;
-}
-
-#more-features p {
-  font-size: 14px;
-  margin-left: 100px;
-  margin-bottom: 0;
-  line-height: 24px;
-}
-
-@media (max-width: 767px) {
-  #more-features .box {
-    margin-bottom: 20px;
-  }
-  #more-features .icon {
-    float: none;
-    text-align: center;
-    padding-bottom: 15px;
-  }
-  #more-features h4, #more-features p {
-    margin-left: 0;
-    text-align: center;
-  }
-}
-
-/* Clients Section
---------------------------------*/
-#clients {
-  padding: 30px 0;
-  background: #fff;
-  overflow: hidden;
-}
-
-#clients img {
-  max-width: 100%;
-  opacity: 0.5;
-  transition: 0.3s;
-  padding: 15px 0;
-}
-
-#clients img:hover {
-  opacity: 1;
-}
-
-/* Pricing Section
---------------------------------*/
-#pricing {
-  padding: 60px 0 60px 0;
-  overflow: hidden;
-}
-
-#pricing .box {
-  padding: 40px;
-  margin-bottom: 30px;
-  box-shadow: 0px 0px 30px rgba(73, 78, 92, 0.15);
-  background: #fff;
-  text-align: center;
-}
-
-#pricing h3 {
-  font-weight: 400;
-  margin-bottom: 15px;
-  font-size: 28px;
-}
-
-#pricing h4 {
-  font-size: 46px;
-  color: #1dc8cd;
-  font-weight: 300;
-}
-
-#pricing h4 sup {
-  font-size: 20px;
-  top: -20px;
-}
-
-#pricing h4 span {
-  color: #bababa;
-  font-size: 20px;
-}
-
-#pricing ul {
-  padding: 0;
-  list-style: none;
-  color: #999;
-  text-align: left;
-  line-height: 20px;
-}
-
-#pricing ul li {
-  padding-bottom: 12px;
-}
-
-#pricing ul i {
-  color: #1dc8cd;
-  font-size: 18px;
-  padding-right: 4px;
-}
-
-#pricing .get-started-btn {
-  background: #515e61;
-  display: inline-block;
-  padding: 6px 30px;
-  border-radius: 20px;
-  color: #fff;
-  transition: none;
-  font-size: 14px;
-  font-weight: 400;
-  font-family: "Montserrat", sans-serif;
-}
-
-#pricing .featured {
-  border: 2px solid #1dc8cd;
-}
-
-#pricing .featured .get-started-btn {
-  background: linear-gradient(45deg, #1de099, #1dc8cd);
-}
-
-/* Frequently Asked Questions Section
---------------------------------*/
-#faq {
-  padding: 60px 0;
-  overflow: hidden;
-}
-
-#faq #faq-list {
-  padding: 0;
-  list-style: none;
-}
-
-#faq #faq-list li {
-  border-bottom: 1px solid #ddd;
-}
-
-#faq #faq-list a {
-  padding: 18px 0;
-  display: block;
-  position: relative;
-  font-family: "Montserrat", sans-serif;
-  font-size: 22px;
-  line-height: 1;
-  font-weight: 300;
-  padding-right: 20px;
-}
-
-#faq #faq-list i {
-  font-size: 24px;
-  position: absolute;
-  right: 0;
-  top: 16px;
-}
-
-#faq #faq-list p {
-  margin-bottom: 20px;
-}
-
-@media (max-width: 768px) {
-  #faq #faq-list a {
-    font-size: 18px;
-  }
-  #faq #faq-list i {
-    top: 13px;
-  }
-}
-
-#faq #faq-list a.collapse {
-  color: #1dc8cd;
-}
-
-#faq #faq-list a.collapsed {
-  color: #000;
-}
-
-#faq #faq-list a.collapsed i::before {
-  content: "\f2c7" !important;
-}
 
 /* Our Team Section
 --------------------------------*/
@@ -1107,7 +815,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   margin: 0 2px;
 }
 
-/* Gallery Section
+/* Bagian Gallery Section
 --------------------------------*/
 #gallery {
   background: #fff;
@@ -1153,7 +861,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   background: rgba(0, 0, 0, 0.7);
 }
 
-/* Contact Section
+/* Bagian Contact Section
 --------------------------------*/
 #contact {
   box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
@@ -1317,22 +1025,4 @@ body.mobile-nav-active #mobile-nav-toggle {
   padding: 30px 0;
   color: #333;
   font-size: 14px;
-}
-
-#footer .credits {
-  font-size: 13px;
-  color: #888;
-}
-
-#footer .footer-links a {
-  color: #666;
-  padding-left: 15px;
-}
-
-#footer .footer-links a:first-child {
-  padding-left: 0;
-}
-
-#footer .footer-links a:hover {
-  color: #1dc8cd;
 }
